# Hunyuan3D-API

./: .dockerignore  .env.example  .gitignore  .gitignore copy  .pre-commit-config.yaml  Dockerfile  Hunyuan3D.ipynb  README.md  Readme  install.sh  interface.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker.yml  test.yml
config/: settings.toml
hunyuan3d_api/: __init__.py  app.py  main.py
hunyuan3d_api/api/: __init__.py  routes.py
hunyuan3d_api/config/: __init__.py
hunyuan3d_api/core/: __init__.py  model_manager.py  utils.py
notebooks/: Hunyuan3D.ipynb
tests/: __init__.py  test_api.py  test_config.py
