[project]
name = "hunyuan3d-api"
version = "0.1.0"
description = "FastAPI-based REST API for generating 3D models from images using Hunyuan3D"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Hunyuan3D API Contributors" }]
keywords = ["3d", "fastapi", "hunyuan3d", "ai", "generative"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "trimesh>=4.5.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "huggingface-hub>=0.26.0",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "dynaconf>=3.2.0",
    "pyngrok>=7.2.0",
    # hy3dgen is NOT on PyPI — installed separately from Hunyuan3D-2 source.
    # See Dockerfile or install.sh for setup instructions.
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",  # for TestClient
]

[project.scripts]
hunyuan3d-api = "hunyuan3d_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hunyuan3d_api"]

# ---------------------------------------------------------------------------
# uv — dev dependency group (PEP 735 / uv native format)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["hunyuan3d_api"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hunyuan3d_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
pretty = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
